# LDSO

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  install_dependencies.sh  make_project.sh  readme.md
doc/: .gitignore  Makefile  note_on_dso.tex  reference.bib
examples/: CMakeLists.txt  DatasetReader.h  run_dso_euroc.cc  run_dso_kitti.cc  run_dso_tum_mono.cc
examples/EUROC/: EUROC.txt
examples/Kitti/: Kitti00-02.txt  Kitti03.txt  Kitti04-12.txt
include/: AffLight.h  Camera.h  Feature.h  Frame.h  Map.h  NumTypes.h  Point.h  Settings.h
include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FeatureDetector.h  FeatureMatcher.h  FullSystem.h  ImageAndExposure.h  ImageRW.h  LoopClosing.h  MinimalImage.h  PixelSelector2.h  Undistort.h  nanoflann.h
include/internal/: CalibHessian.h  FrameFramePrecalc.h  FrameHessian.h  GlobalCalib.h  GlobalFuncs.h  ImmaturePoint.h  IndexThreadReduce.h  PR.h  PointHessian.h  RawResidualJacobian.h  ResidualProjections.h  Residuals.h
include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.h  MatrixAccumulators.h
src/: CMakeLists.txt  Camera.cc  Feature.cc  Frame.cc  Map.cc  Point.cc  Setting.cc
src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FeatureDetector.cc  FeatureMatcher.cc  FullSystem.cc  ImageRW_OpenCV.cc  LoopClosing.cc  PixelSelector2.cc  Undistort.cc
src/internal/: FrameFramePrecalc.cc  FrameHessian.cc  GlobalCalib.cc  ImmaturePoint.cc  PR.cc  PointHessian.cc  Residuals.cc
src/internal/OptimizationBackend/: AccumulatedSCHessian.cc  AccumulatedTopHessian.cc  EnergyFunctional.cc
